[gd_scene load_steps=13 format=2]

[ext_resource path="res://Building.tscn" type="PackedScene" id=1]
[ext_resource path="res://Buildings/Area1/WindmillDoor.png" type="Texture" id=2]
[ext_resource path="res://Buildings/Area1/Windmill.png" type="Texture" id=3]
[ext_resource path="res://Buildings/Area1/WindmillInside.png" type="Texture" id=4]
[ext_resource path="res://Blades.gd" type="Script" id=5]
[ext_resource path="res://Buildings/Area1/WindmillBlades.png" type="Texture" id=6]
[ext_resource path="res://Buildings/Area1/WindmillDoorOutline.png" type="Texture" id=7]
[ext_resource path="res://Environment/Artificial/BigGear.png" type="Texture" id=8]
[ext_resource path="res://Environment/Artificial/SmallGear.png" type="Texture" id=9]
[ext_resource path="res://WindmillLever.gd" type="Script" id=10]
[ext_resource path="res://Lever.tscn" type="PackedScene" id=11]
[ext_resource path="res://WindmillDoor.gd" type="Script" id=12]

[node name="Windmill" instance=ExtResource( 1 )]
texture = ExtResource( 4 )

[node name="Lever" parent="." index="0" instance=ExtResource( 11 )]
position = Vector2( 12, 42 )
script = ExtResource( 10 )
canInteract = false

[node name="BigGear" type="Sprite" parent="." index="1"]
position = Vector2( 7, 4 )
rotation = 720.56
texture = ExtResource( 8 )
script = ExtResource( 5 )
speed = 0

[node name="BigGear2" type="Sprite" parent="." index="2"]
position = Vector2( 10, 12 )
rotation = -368.027
texture = ExtResource( 8 )
script = ExtResource( 5 )
speed = 0

[node name="SmallGear" type="Sprite" parent="." index="3"]
position = Vector2( 2, 1 )
rotation = -1335.34
texture = ExtResource( 9 )
script = ExtResource( 5 )
speed = 0

[node name="SmallGear2" type="Sprite" parent="." index="4"]
rotation = 1101.99
texture = ExtResource( 9 )
script = ExtResource( 5 )
speed = 0

[node name="BuildingOutside" parent="." index="6"]
z_index = 1
texture = ExtResource( 3 )

[node name="Blades" type="Sprite" parent="BuildingOutside" index="0"]
position = Vector2( 0, 1 )
rotation = 0.602139
z_index = 1
texture = ExtResource( 6 )
script = ExtResource( 5 )
speed = 0

[node name="StaticBody2D" type="StaticBody2D" parent="BuildingOutside/Blades" index="0"]
collision_layer = 39
collision_mask = 7

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BuildingOutside/Blades/StaticBody2D" index="0"]
polygon = PoolVector2Array( -10, 32, 1, 32, 1, 3, 3, 1, 14, 8, 32, 10, 32, -1, 3, -1, 1, -3, 8, -14, 10, -32, -1, -32, -1, -3, -3, -1, -14, -8, -32, -10, -32, 1, -3, 1, -1, 3, -8, 14 )

[node name="Door" parent="." index="7"]
position = Vector2( -5, 40 )
texture = ExtResource( 2 )
offset = Vector2( 5, -40 )
script = ExtResource( 12 )
animationTime = 1
zoom = 1.0
inside = false

[node name="Outline" parent="Door" index="0"]
position = Vector2( 5, -40 )
z_index = 0
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" parent="Door/InteractionArea" index="0"]
visible = false
polygon = PoolVector2Array( -0.0883865, -3.88909, 3.09359, -6.98268, 7.95495, -7.07107, 10.9602, -3.97748, 11.0485, 8.92722, 0, 9.01561 )

[node name="StaticBody2D" parent="." index="8"]
collision_layer = 48

[node name="CollisionPolygon2D" parent="StaticBody2D" index="0"]
polygon = PoolVector2Array( -20, 46.5, -24, 49.375, 23.216, 51.9037, 24.5508, 46.7312, 20.5463, 7.01971, 16.3749, -4.82699, 10.2013, -10.6669, 0.857395, -13.1697, -9.65447, -10.8338, -14.9938, -7.49667, -18.9983, -0.82247, -24.004, 47.5655, -20.75, 46, -13.8258, 0.512371, -10.9893, -4.32642, -5.48309, -7.49667, -0.143734, -8.4978, 5.86304, -7.66352, 10.7018, -5.1607, 12.871, -1.65674, 15.0401, 3.51576, 20.5, 46.5 )

[editable path="Door"]
